# RoboHospitalGuide

./: .gitignore  .gitmodules  CMakeLists.txt  Develop_log.md  Process Identification.md  Process Identification.txt  ProcessIdentification.md  README.md  README_CN.md  obstacle_avoidance_new.cpp  qianrushiyundong  setup.sh
SQL/: add.py  hospital_guide_init.sql
config/: HospitalGuide_2025-04-18.sql  nav.json  project_config.hpp
include/: MainThread.h  maincontroller.h
include/core/: block.hpp  face_recognizer.h  nav.h  nav.hpp  navigation_block.h  navigation_block.hpp  obstacle_avoidance.h  obstacle_block.h  obstacle_block.hpp  ultrasonic.h
include/drivers/: face_recognition.h  gyroscope_driver.h  gyroscope_driver.hpp  motor.h  motor_control.h  motor_driver.h  motor_driver.hpp  mpu6050.h  navigation.h  obstacle_avoidance.h  record.h  sensor.h  servo.h  servonew.h.dd  ultrasonic_driver.h  ultrasonic_driver.hpp  yaw_tracker.h
include/drivers/hal/: gpio.h  gpio.hpp  i2c.h  i2c.hpp  pwm.h  pwm.hpp  spi.h  spi.hpp
include/utils/: error_handling.hpp  logger.hpp
src/: MainThread.cpp  face_recognition.cpp  m.cpp  main.cpp  maincontrolor.cpp  motor_control.cpp  navigation.cpp  obstacle_avoidance_1.cpp  obstacle_avoidance_new.cpp.odd  obstacle_avoidance_simple.cpp.dd  obstacle_block.cpp  sensors.cpp
src/core/: block.c  block.cpp  face_recognizer.cpp  na1.cpp  nav.cpp  navigation_block.c  navigation_block.cpp  obstacle_block.c  obstacle_block.cpp
src/drivers/: gyroscope_driver.c  gyroscope_driver.cpp  motor.cpp  motor_driver.c  motor_driver.cpp  mpu6050.cpp  obstacle_avoidance.cpp  record.cpp  servo.cpp  servonew.cpp.odd  ultrasonic_driver.c  yaw_tracker.cpp
src/drivers/hal/: gpio.c  i2c.c  pwm.c  pwm.cpp  spi.c
src/utils/: logger.cpp
tests/core/: test_block.cpp
tests/drivers/Camera/: CMakeLists.txt  Camera-test.cpp  face.cpp  face.cpp.odd  face.h  main.cpp.dd
tests/drivers/MPU6050/: Camera-test  MPU6050.cpp  MPU6050.hpp  MPU6050.py  mpu6050_test.cpp
tests/drivers/Speaker/: Speaker  Speaker.cpp
tests/drivers/Ultrasonic sensor(HC-SR04)/: HC  HC-SR04.cpp  new  sr04-2  sr04-2.cpp
tests/drivers/encoder/: encoder.cpp  encoder.h  encoder_read  encoder_read.cpp  pid.cpp  pid.h
tests/drivers/motor/: motor.cpp  motor.hpp  motor_test  pwm.hpp
tests/drivers/motor_pwm/: CMakeLists.txt  motor.cpp  motor.h  motor_test.cpp  sover  sovor.cpp  sovor.h  sovor_test.cpp  web_control.cpp
tests/drivers/motor_simulate_pwm/: CMakeLists.txt  motor  motor.cpp  motor.py
tests/drivers/servo/: servo.py
tests/web/: CMakeLists.txt  main.py  motor
web/: CMakeLists.txt  web.cpp
